--- a/RemoteControl/Website/AdminPanelBlazorServer/Pages/Index.razor
+++ b/RemoteControl/Website/AdminPanelBlazorServer/Pages/Index.razor
@@ -1,11 +1,12 @@
 ﻿@page "/"
 
 
-<h1>Entwicklung von VR Lehr-Lernanwendungen mit Unity</h1>
+<h1>Augmented and Virtual Reality WiSe2022/23</h1>
 
-<h2>Projekt: Upload und Wiedergabe von Audio-Dateien</h2>
-In diesem Thema ist in Unity ein Avatar zu modellieren, der auf die Zusendung von Audio-Dateien (z.B. MP3s) von außerhalb der Unity-Anwendung wartet.
-Die Unity-Anwendung müsste also eine Schnittstelle für den Upload bzw. den Empfang von Audio-Dateien bereithalten.
-Zudem gehört die Implementierung einer Webseite für die Auswahl (vom lokalen Rechner) und den Unity-Upload der Audiodatei zum Umfang dieses Themas.
-NEUES BLAZOR PROJEKT
-<h2>Autor: Alexander Gayko</h2>
+<h2>Projekt: Erweitern der VR-Fahrradwerkstatt um ein Admin-Panel</h2>
+
+<h2>Autoren</h2>
+<h3>Tim Fechner</h3>
+<h3>Alexander Gayko</h3>
+<h3>Lennart Küppers</h3>
+<a href="UnityRemoteControl">Admin-Panel</a>
