added sound source improved visuals of companion website.

--- a/RemoteControl/Website/AdminPanelBlazorServer/Components/ScreenshotSource.razor
+++ b/RemoteControl/Website/AdminPanelBlazorServer/Components/ScreenshotSource.razor
@@ -1,4 +1,4 @@
-﻿<div id=@ID style="width:500px;height:300px;">
+﻿<div id=@ID style="width:500px;height:300px;padding:10px;">
     @ChildContent
 </div>
 
