--- a/RemoteControl/Website/AdminPanelBlazorServer/Components/GameCapture.razor
+++ b/RemoteControl/Website/AdminPanelBlazorServer/Components/GameCapture.razor
@@ -2,15 +2,20 @@
 
 @if (ImageSourceBase64 is not null)
 {
-    <div>
-        <img src=@($"data:image/PNG;base64,{ImageSourceBase64}")/>
+    <div >
+        @DisplayTitle
+        <br/>
+        <img style="border-radius:15px;" src=@($"data:image/PNG;base64,{ImageSourceBase64}") />
     </div>
 }
 @code
 {
     [Parameter]
     public string ImageTag{ get; set; }
+    [Parameter]
+    public string Title { get; set; }
 
+    private string DisplayTitle => Title ?? ImageTag;
     protected string ImageSourceBase64 { get; set; }
 
     protected override async Task OnParametersSetAsync()
