--- a/RemoteControl/Website/AdminPanelBlazorServer/Components/RemoteController.razor
+++ b/RemoteControl/Website/AdminPanelBlazorServer/Components/RemoteController.razor
@@ -4,65 +4,18 @@
 
 <div>
     <h3>Audiodatei hochladen</h3>
-    <form class="form-inline" id="uploadPostForm" method="post" enctype="multipart/form-data" target="hiddenFrame" ref="form_uploadPostForm">
-        @code
-        {
-            ElementReference form_uploadPostForm;
-        }
-        <input type="file" id="formfile" name="ImageFile" required @onchange=FileInputChangedSubmitForm />
 
-        <!-- damit das POST nicht auf eine neue Seite geht, ist das Target des Formulars dieses unsichtbare div: -->
-        <div id="hiddenDiv" style="display:none; visibility:hidden;">
-            <iframe src="about:blank" height="100" width="300" border="0" scrolling="no" name="hiddenFrame" id="hiddenFrame"></iframe>
-        </div>
-        <input type="button" id="broadcast" value="Stummschalten" @onclick=SetAudioMute />
-        <input type="button" id="broadcast" value="laut schalten" @onclick=SetAudioUnmute />
-        <input type="button" id="broadcast" value="Stop" @onclick=StopAudio />
-    </form>
-    <p id="postResponse" ref="p_postInfo">
-    </p>
-    @code
-    {
-        ElementReference p_postInfo;
-    }
+    <InputFile OnChange="@LoadFiles" multiple />
 
-    @code
-    {
-        /// <summary>
-        /// Change-Handler für das Dateiauswahl-Input-Element
-        /// </summary>
-        public async void FileInputChangedSubmitForm()
-        {
-            /// Formular absenden
-            await SubmitForm(form_uploadPostForm);
-
-            string initialcontent = await JSRuntime.InvokeAsync<string>("JsFunctions.GetIFrameInnerHtml");
-
-            /// Prüfen, ob sich der Wert des IFrames geändert hat.
-            string content = initialcontent;
-            DateTime timeout = DateTime.UtcNow.AddSeconds(5);
-            int cnt = 0;
-            while (timeout > DateTime.UtcNow && content == initialcontent)
-            {
-                cnt++;
-                await SetStatus($"converting & transferring... {cnt}00 ms");
-                await Task.Delay(100);
-                content = await JSRuntime.InvokeAsync<string>("JsFunctions.GetIFrameInnerHtml");
-            }
-            if (content != initialcontent)
-            {
-                await SetStatus("sending audio command...");
-                await SetAudio($"files/{content.Trim().Replace('\\', '/')}");
-                await SetStatus("sent audio command...");
-            }
-        }
-
-        public ValueTask<object> SetStatus(string status)
-        => JSRuntime.InvokeAsync<object>("JsFunctions.SetContent", p_postInfo, status);
-
-        public ValueTask<object> SubmitForm(ElementReference form)
-        => JSRuntime.InvokeAsync<object>("JsFunctions.SubmitForm", form);
-    }
+    <div>
+    <!-- damit das POST nicht auf eine neue Seite geht, ist das Target des Formulars dieses unsichtbare div: -->
+    <input type="button" id="broadcast" value="Stummschalten" @onclick=SetAudioMute />
+    <input type="button" id="broadcast" value="laut schalten" @onclick=SetAudioUnmute />
+    <input type="button" id="broadcast" value="Stop" @onclick=StopAudio />
+    </div>
+    <div>
+        <p id="Status" ref="p_postInfo" />
+    </div>
 </div>
 
 <h3>Befehl absenden</h3>
@@ -104,7 +57,6 @@
     </ul>
 </div>
 
-
 @code
 {
     protected override void OnParametersSet()
@@ -122,4 +74,25 @@
         });
     }
 
+    ElementReference p_postInfo;
+
+    public ValueTask<object> SetStatus(string status) => JSRuntime.InvokeAsync<object>("JsFunctions.SetContent", p_postInfo, status);
+
+    private async void LoadFiles(InputFileChangeEventArgs e)
+    {
+        if (e.FileCount == 1)
+        {
+            await SetStatus("Uploading file...");
+            var trustedFileNameForFileStorage = Path.GetRandomFileName() + ".ogg";
+
+            var path = Path.Combine(Directory.GetParent(Directory.GetParent(Directory.GetParent(Directory.GetParent(Environment.ProcessPath).FullName).FullName).FullName).FullName, "wwwroot", "posted", trustedFileNameForFileStorage);
+            using (var stream = File.Create(path))
+            {
+                await e.File.OpenReadStream(5_000_000).CopyToAsync(stream);
+            }
+            await SetStatus("sending audio command...");
+            await SetAudio($"{Navigation.BaseUri}{"posted"}/{trustedFileNameForFileStorage}");
+            await SetStatus("sent audio command...");
+        }
+    }
 }
